# tech-foundations

./: .gitignore  README.md  env_check.py  nd_task7_rl_data.csv
Arduino/ND_Task_4/ultrasonic_test_serial/: ultrasonic_test_serial.ino
Arduino/WEEK_1/blink/: led_blink.fzz
Arduino/WEEK_2/servo_control/: servo_control.ino
Arduino/WEEK_3/ND_Task1_Pot_LED_Servo/: ND_Task1_Pot_LED_Servo.ino
Arduino/Week_7/imu_serial/: imu_serial.ino  serial_reader.py
CAD/ND_2/: CubeSat_Frame.f3d  CubeSat_Frame.stl
CAD/WEEK_1/: CUBE.stl  CYLINDER.f3d  CYLINDER.stl  cube.f3d
CAD/WEEK_3/: 2-Link Manipulator.f3d  2-Link Manipulator.stl
ai/: mnist_curves.py  mnist_min.py  ppo_cartpole.py  requirements.txt
ai/week7/: demo_reach_target.py  gazebo_env_wrapper.py  ppo_train.py
ai/week8/: plot_reward.py  plot_reward_len.py
blink/WEEK_1/: blink.ino
docs/: controller_abstraction.md  experiment_log_template.md  foundation_scope.md  ft_logging_standard.md
project_log/: AI_ND_1.md  ND_EXTRA.md  ND_LABPRE_Summary.md  ND_Task1.md  ND_Task3.md  ND_Task4.md  ND_Task5.md  ND_Task6.md  WEEK_ 2.md  WEEK_1.md  WEEK_3.md  WEEK_6.md  WEEK_8.md  nd_task7_rl_report.md  phase_transition_2026-01-01.md  week_7.md
project_log/rewrites/: 2024-12-28_ndtask7_rewrite.md
report/: nd_task7_rl_plot.py
ros2_ws/src/ai_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/ai_controller/ai_controller/: ai_node.py
runs/ND_1/: monitor.csv
runs/mnist_baseline/: metrics.csv
webcontrollers/worlds/: .differential_drive_world.wbproj  differential_drive_world.wbt
(+2 files in other folders)
