<?xml version="1.0"?>
<package format="3">
  <name>ai_controller</name>
  <version>0.0.0</version>
  <description>AI controller node using PPO model.</description>

  <maintainer email="you@example.com">sean</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
